<resources>
    <string name="app_name">ARMM</string>
    <string name="app_website">http://opened.opengov.ph</string>
    <string name="app_description">The ARMM government is committed to collecting and disclosing the exact geographic location of every school in the region, and taking stock of basic infrastructure conditions and presence of teachers and students.</string>
    <string name="downloading_surveys_">Downloading surveys…</string>
    <string name="survey_title">Survey Title</string>
    <string name="survey_description">Survey Description</string>
    <string name="synchronization_error">Synchronization Error</string>
    <string name="ok">OK</string>
    <string name="survey_questions">Survey Questions</string>
    <string name="survey">Survey</string>
    <string name="question">Question</string>
    <string name="action_search">Search</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="question_name">Question Name</string>
    <string name="question_type">Question Type</string>
    <string name="question_ordinal">Question Ordinal</string>
    <string name="question_description">Question Description</string>
    <string name="done">Done</string>
    <string name="question_required">*Required</string>
    <string name="not_required">Not Required</string>
    <string name="required">Required</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">OpenEd password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="name_required">Name Required</string>
    <string name="name_required_description">Please enter your name.</string>
    <string name="email_required">Email Required</string>
    <string name="email_required_description">Please enter a valid email address.</string>
    <string name="password_required">Password Required</string>
    <string name="password_required_description">Please enter a password.</string>
    <string name="signing_up_">Signing up…</string>
    <string name="logging_in_">Logging in…</string>
    <string name="previous">Previous</string>
    <string name="answer_value">Answer Value</string>
    <string name="enter_username">OpenEd username</string>
    <string name="username_required">Username Required</string>
    <string name="username_required_description">Please enter your username.</string>
    <string name="downloading_survey_">Downloading survey…</string>
    <string name="results">Results</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="surveys">Surveys</string>
    <string name="submissions">Submissions</string>
    <string name="answers">Answers</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_title">Title Case Text</string>
    <string name="keyboard_sentence">Capitalized Text</string>
    <string name="keyboard_uppercase">Uppercase Text</string>
    <string name="keyboard_lowercase">Lowercase Text</string>
    <string name="keyboard_name">Person Name</string>
    <string name="keyboard_phone">Phone Number</string>
    <string name="keyboard_email">Email Address</string>
    <string name="keyboard_decimal">Decimal Number</string>
    <string name="keyboard_number">Whole Number</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="discard_submission">Discard Submission</string>
    <string name="discard_submission_description">Are you sure you want to discard this survey submission?</string>
    <string name="submission_discarded">Submission Discarded</string>
    <string name="submitting_">Submitting…</string>
    <string name="edit">Edit</string>
    <string name="action_upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure you want to logout? All current downloaded and collected data will be removed.</string>
    <string name="deleting_">Deleting…</string>
    <string name="logging_out_">Logging out…</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="posting_submissions_">Posting submissions…</string>
    <string name="downloading_surveys">Downloading surveys</string>
    <string name="question_not_supported_grid">The grid question type is currently not supported.</string>
    <string name="question_not_supported_pagebreak">The pagebreak question type is currently not supported.</string>
    <string name="question_not_supported_fieldset">The fieldset question type is currently not supported.</string>
    <string name="question_not_supported_hidden">The hidden question type is currently not supported.</string>
    <string name="question_not_supported_file">The file question type is currently not supported.</string>
    <string name="html_markup">HTML Markup</string>
    <string name="question_error">Question Error</string>
    <string name="question_error_description">There was a problem loading the question type.</string>
    <string name="survey_no_title">Survey With No Title</string>
    <string name="action_refresh">Refresh</string>
    <string name="refreshing_">Refreshing…</string>
    <string name="clear">Clear</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="clear_date">Clear Date</string>
    <string name="clear_time">Clear Time</string>
    <string name="import_contact">Import Contact</string>
    <string name="set_now">Set Now</string>
    <string name="set_today">Set Today</string>
    <string name="question_not_supported_geofield">The geofield question type is currently not supported.</string>
    <string name="fieldset_not_saved">Saving of fieldset not implemented yet.</string>
    <string name="fieldset_not_loaded">Loading of fieldset not implemented yet.</string>
    <string name="questions">Questions</string>
    <string name="completed">Completed</string>
    <string name="of">of</string>
    <string name="profiles">Profiles</string>
    <string name="downloading_profiles_">Downloading profiles…</string>
    <string name="downloading_nodes_">Downloading nodes…</string>
    <string name="downloading_profile_">Downloading profile…</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_or_take_photo">Select Or Take Photo</string>
    <string name="image">Image</string>
    <string name="profile">Profile</string>
    <string name="fields">Fields</string>
    <string name="send_email">Send Email</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="select_photo">Select Photo</string>
    <string name="use_camera">Use Camera</string>
    <string name="profile_has_no_title">Profile Has No Title</string>
    <string name="field">Field</string>
    <string name="upload_error">Upload Error</string>
    <string name="upload_error_description">There was an unknown problem uploading data to the server.</string>
    <string name="synchronization_error_description">There was an unknown problem downloading data from the server.</string>
    <string name="already_logged_in">Already Logged In</string>
    <string name="already_logged_in_description">It appears you are already logged in, so your old session has been removed. Please try to login again.</string>
    <string name="current_location">Current Location</string>
    <string name="locating_">Locating…</string>
    <string name="open">Open</string>
    <string name="survey_submission_not_saved">There was a problem posting the submission. Please verify all survey fields have been entered and please try again.</string>
    <string name="posted">Posted</string>
    <string name="submitted">Submitted</string>
    <string name="discard_photo">Discard Photo</string>
    <string name="answer_required">Answer Required</string>
    <string name="email_invalid">Email Invalid</string>
    <string name="text_required">Text Required</string>
    <string name="date_required">Date Required</string>
    <string name="time_required">Time required</string>
    <string name="selection_required">Selection Required</string>
    <string name="number_required">Number Required</string>
    <string name="photo_required">Photo Required</string>
    <string name="location_required">Location Required</string>
    <string name="valid_email_required">Valid Email Required</string>
    <string name="enter_login_description">Please login using your OpenEd account credentials.</string>
    <string name="enter_login_help">If you need to create an OpenEd account or forgot your password, please visit http://opened.opengov.ph/user/login.</string>
    <string name="enter_signup_description">Please enter your information to signup.</string>
    <string name="enter_signup_help">If you have problems signing up, please visit http://opened.opengov.ph/user/login.</string>
    <string name="incomplete">Incomplete</string>
    <string name="no_surveys">No Surveys</string>
    <string name="no_submissions">No Submissions</string>
    <string name="no_incomplete_surveys">No Incomplete Surveys</string>
    <string name="no_completed_surveys">No Completed Surveys</string>
    <string name="not_saved">Not Saved</string>
    <string name="not_submitted">Not Submitted</string>
    <string name="not_completed">Not Completed</string>
    <string name="answer_not_required">Answer is not required</string>
    <string name="region">Region</string>
    <string name="province">Province</string>
    <string name="municipality">Municipality</string>
    <string name="barangay">Barangay</string>
    <string name="psgc_required">PSGC Required</string>
    <string name="downloading_psgc_">Downloading PSGC...</string>
    <string name="loading_submissions_">Loading submissions</string>
    <string name="map_marker_hint">Drag the current map pin or long press on the map to move it to a new location.</string>
    <string name="Required">Required</string>
    <string name="total">Total</string>
    <string name="pending">Pending</string>
    <string name="exit">Exit</string>
    <string name="answered">Answered</string>
</resources>
