<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView.Vertical">
    <LinearLayout
        style="@style/LinearLayout.Vertical">
        <include layout="@layout/fragment_widget"/>
        <LinearLayout
            style="@style/LinearLayout.Vertical">
            <TextView
                android:text="@string/region"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                style="@style/TextView.Title" />
            <Spinner
                android:id="@+id/spinner_regions"
                android:spinnerMode="dropdown"
                style="@style/Spinner" />

            <TextView
                android:text="@string/province"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                style="@style/TextView.Title" />
            <Spinner
                android:id="@+id/spinner_provinces"
                android:spinnerMode="dropdown"
                style="@style/Spinner"/>

            <TextView
                android:text="@string/municipality"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                style="@style/TextView.Title" />
            <Spinner
                android:id="@+id/spinner_municipalities"
                android:spinnerMode="dropdown"
                style="@style/Spinner"/>

            <TextView
                android:text="@string/barangay"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                style="@style/TextView.Title" />
            <Spinner
                android:id="@+id/spinner_barangays"
                android:spinnerMode="dropdown"
                style="@style/Spinner" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>